<resources>
    <string name="app_name">Minimal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_devices">Devices</string>
    <string name="title_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sample"> </string>
    <string name="darksky">Powered by Dark Sky</string>
    <string name="changepwd">Change Password</string>
    <string name="title_location_permission">Allow location permission?</string>
    <string name="text_location_permission">This app need to access your location to get forecast status.</string>
    <string name="ok">OK</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- This string used for notification -->
    <string name="channel">31</string>
    <string name="description">notification</string>

    <!-- This string is used for UI Login -->
    <string name="slogan">minimal thing make life simpler</string>
    <string name="hint_email_login">type your email</string>
    <string name="hint_password_login">type your password</string>
    <string name="text_button_forgot_password">Forgot password?</string>
    <string name="text_button_sign_up">Sign up</string>
    <string name="percent">%</string>
    <string name="windspeed">wind speed: </string>
    <string name="timezone">time zone: </string>
    <string name="temperature">temperature: </string>
    <string name="humidity">humidity: </string>
    <string name="uvindex">UV Index: </string>

    <!-- This string used for UI Sign Up -->
    <string name="hint_sign_up_name">type your first name</string>
    <string name="hint_sign_up_email">type your email</string>
    <string name="hint_sign_up_password">type your password</string>
    <string name="hint_sign_up_confirm_password">type your password again</string>

    <!-- This string used for UI Forgot Password -->
    <string name="hint_email_forgot_password">type your email</string>

    <!-- This string used for Fragment Home -->
    <string name="welcome">Welcome, </string>
    <string name="default_name">Guest!</string>
    <string name="good_morning">Good morning, </string>
    <string name="good_afternoon">Good afternoon, </string>
    <string name="good_night">Good night, </string>
    <string name="copyright">Copyright by Jay Kit</string>
    <string name="thank">Thank you for using, hope you will have a great experience with this application.
This product is a part of my graduation project. Thanks to my family, teachers, and friends for always supporting and helping me complete this product as best as possible.</string>
    <string name="symbol">----------------------------------</string>
    <!-- This string used for Fragment title -->
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="user">User</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- This string used for User Fragment  -->
    <string name="email">email: </string>
    <string name="name">name</string>
    <string name="password">Password: </string>
    <string name="username_example">example@email.com</string>
    <string name="password_example">********</string>
    <string name="change_pwd">change password</string>
    <string name="text">something text in here</string>
    <!-- This string used for change password Activity -->
    <string name="old_password">type your old password</string>
    <string name="new_password">type your new password</string>
    <string name="verify_new_password">type your new password again</string>

    <!-- splash content -->
    <string name="splash">jaykit</string>
</resources>