<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/changepwd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtOldPwd"
        android:layout_width="328dp"
        android:layout_height="35dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/edtNewPwd"
        android:layout_width="328dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOldPwd" />

    <EditText
        android:id="@+id/edtVerifyPwd"
        android:layout_width="328dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:hint="@string/verify_new_password"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPwd" />

    <ImageView
        android:id="@+id/btnChangePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtVerifyPwd"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

</androidx.constraintlayout.widget.ConstraintLayout>